--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:unit": "vitest run",
-    "test:e2e": "cypress run",
+    "test:e2e": "start-server-and-test dev http://localhost:8080 'cypress run'",
     "test:e2e:dev": "cypress open"
   },
   "dependencies": {
@@ -84,6 +84,7 @@
     "jsdom": "^24.0.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
+    "start-server-and-test": "^2.0.11",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
