--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:unit": "vitest run",
-    "test:e2e": "start-server-and-test dev http://localhost:8080 'cypress run'",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "test:e2e:dev": "cypress open"
   },
   "dependencies": {
@@ -89,6 +92,10 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "@playwright/test": "^1.42.1",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "hardhat": "^2.20.1",
+    "ethers": "^5.7.2"
   }
 }
