--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
@@ -83,19 +85,18 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "ethers": "^5.7.2",
     "globals": "^15.9.0",
+    "hardhat": "^2.20.1",
     "jsdom": "^24.0.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "start-server-and-test": "^2.0.11",
     "tailwindcss": "^3.4.11",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vitest": "^1.3.1",
-    "@playwright/test": "^1.42.1",
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.20.1",
-    "ethers": "^5.7.2"
+    "vitest": "^1.3.1"
   }
 }
