feat: otimiza execução de testes com paralelização e cache

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test:unit:changed": "vitest run --changed",
+    "test:unit:coverage": "vitest run --coverage",
+    "test:unit:fast": "vitest run --threads=4 --no-watch",
+    "test:unit:file": "vitest run --",
     "test:e2e": "playwright test || true",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
