--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest",
+    "test": "npm run test:unit",
+    "test:all": "npm run test:unit && npm run test:e2e",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest",
     "test:unit:changed": "vitest run --changed",
@@ -17,6 +18,7 @@
     "test:unit:fast": "vitest run --threads=4 --no-watch",
     "test:unit:file": "vitest run --",
     "test:e2e": "playwright test || true",
+    "test:e2e:fast": "playwright test --workers=4 --retries=0",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:report": "playwright show-report",
