--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -18,11 +18,20 @@ jobs:
         node-version: '20'
         cache: 'npm'
     
-    - name: Install dependencies
-      run: npm ci
+    - name: Cache Playwright Browsers
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/ms-playwright
+          node_modules
+        key: ${{ runner.os }}-playwright-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-playwright-
     
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+    - name: Install Dependencies
+      run: |
+        npm ci
+        npx playwright install --with-deps || true
     
     - name: Run E2E Tests
       run: npm run test:e2e
