--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "preview": "vite preview",
     "test": "npm run test:unit",
     "test:all": "npm run test:unit && npm run test:e2e",
-    "test:unit": "vitest run",
-    "test:unit:watch": "vitest",
-    "test:unit:changed": "vitest run --changed",
-    "test:unit:coverage": "vitest run --coverage",
-    "test:unit:fast": "vitest run --threads=4 --no-watch",
+    "test:unit": "vitest run --exclude=tests/**/*.spec.ts",
+    "test:unit:watch": "vitest --exclude=tests/**/*.spec.ts",
+    "test:unit:changed": "vitest run --changed --exclude=tests/**/*.spec.ts",
+    "test:unit:coverage": "vitest run --coverage --exclude=tests/**/*.spec.ts",
+    "test:unit:fast": "vitest run --threads=4 --no-watch --exclude=tests/**/*.spec.ts",
     "test:unit:file": "vitest run --",
-    "test:e2e": "playwright test || true",
+    "test:e2e": "playwright test",
     "test:e2e:fast": "playwright test --workers=4 --retries=0",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
@@ -29,6 +29,9 @@
     "test:e2e:serve": "concurrently \"playwright show-report\" \"allure open allure-report\"",
     "test:e2e:ci": "playwright test && allure generate allure-results --clean -o allure-report",
     "test:e2e:coverage": "./scripts/generate-coverage.sh",
+    "test:e2e:critical": "playwright test --project=critical",
+    "test:e2e:regression": "playwright test --project=regression",
+    "test:e2e:smoke": "playwright test --project=smoke",
     "report:serve": "playwright show-report",
     "report:build": "playwright show-report --output=playwright-report --quiet",
     "report:deploy": "gh-pages -d playwright-report"
