--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,15 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    
+    - name: Debug Repository Info
+      run: |
+        echo "Repository: ${{ github.repository }}"
+        echo "Ref: ${{ github.ref }}"
+        echo "SHA: ${{ github.sha }}"
+        echo "Event Name: ${{ github.event_name }}"
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
@@ -31,10 +40,16 @@ jobs:
           ${{ runner.os }}-node-
     
     - name: Install dependencies
-      run: npm ci
+      run: |
+        echo "Installing dependencies..."
+        npm ci
+        echo "Dependencies installed successfully"
     
     - name: Run unit tests
-      run: npm run test:unit:coverage
+      run: |
+        echo "Starting unit tests..."
+        npm run test:unit:coverage
+        echo "Unit tests completed"
     
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
@@ -57,6 +72,15 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    
+    - name: Debug Environment
+      run: |
+        echo "Node Version: ${{ matrix.node-version }}"
+        echo "Browser: ${{ matrix.browser }}"
+        echo "Runner OS: ${{ runner.os }}"
+        echo "Runner Temp: ${{ runner.temp }}"
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
@@ -73,17 +97,29 @@ jobs:
           ${{ runner.os }}-playwright-
     
     - name: Install dependencies
-      run: npm ci
+      run: |
+        echo "Installing project dependencies..."
+        npm ci
+        echo "Project dependencies installed"
     
     - name: Install Playwright browsers
-      run: npx playwright install ${{ matrix.browser }} --with-deps
+      run: |
+        echo "Installing Playwright browser: ${{ matrix.browser }}"
+        npx playwright install ${{ matrix.browser }} --with-deps
+        echo "Playwright browser installed"
     
     - name: Run E2E tests
-      run: npm run test:e2e:ci -- --project=${{ matrix.browser }}
+      run: |
+        echo "Starting E2E tests for ${{ matrix.browser }}..."
+        npm run test:e2e:ci -- --project=${{ matrix.browser }}
+        echo "E2E tests completed"
     
     - name: Generate Allure Report
       if: always()
-      run: npm run test:e2e:allure:generate
+      run: |
+        echo "Generating Allure report..."
+        npm run test:e2e:allure:generate
+        echo "Allure report generated"
     
     - name: Upload test results
       uses: actions/upload-artifact@v4
@@ -120,5 +156,7 @@ jobs:
     
     - name: Performance Test
       run: |
+        echo "Starting performance test..."
         npm install -g autocannon
-        autocannon -c 10 -d 60 -r 1000 http://localhost:3000 
+        autocannon -c 10 -d 60 -r 1000 http://localhost:3000
+        echo "Performance test completed" 
