--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
         echo "Ref: ${{ github.ref }}"
         echo "SHA: ${{ github.sha }}"
         echo "Event Name: ${{ github.event_name }}"
+        echo "Workflow: ${{ github.workflow }}"
+        echo "Run ID: ${{ github.run_id }}"
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
@@ -42,13 +44,25 @@ jobs:
     - name: Install dependencies
       run: |
         echo "Installing dependencies..."
-        npm ci
+        for i in {1..3}; do
+          echo "Attempt $i: Installing dependencies..."
+          npm ci && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Dependencies installed successfully"
     
     - name: Run unit tests
       run: |
         echo "Starting unit tests..."
-        npm run test:unit:coverage
+        for i in {1..3}; do
+          echo "Attempt $i: Running unit tests..."
+          npm run test:unit:coverage && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Unit tests completed"
     
     - name: Upload coverage report
@@ -81,6 +95,8 @@ jobs:
         echo "Browser: ${{ matrix.browser }}"
         echo "Runner OS: ${{ runner.os }}"
         echo "Runner Temp: ${{ runner.temp }}"
+        echo "Workflow: ${{ github.workflow }}"
+        echo "Run ID: ${{ github.run_id }}"
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
@@ -99,26 +115,50 @@ jobs:
     - name: Install dependencies
       run: |
         echo "Installing project dependencies..."
-        npm ci
+        for i in {1..3}; do
+          echo "Attempt $i: Installing dependencies..."
+          npm ci && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Project dependencies installed"
     
     - name: Install Playwright browsers
       run: |
         echo "Installing Playwright browser: ${{ matrix.browser }}"
-        npx playwright install ${{ matrix.browser }} --with-deps
+        for i in {1..3}; do
+          echo "Attempt $i: Installing Playwright browser..."
+          npx playwright install ${{ matrix.browser }} --with-deps && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Playwright browser installed"
     
     - name: Run E2E tests
       run: |
         echo "Starting E2E tests for ${{ matrix.browser }}..."
-        npm run test:e2e:ci -- --project=${{ matrix.browser }}
+        for i in {1..3}; do
+          echo "Attempt $i: Running E2E tests..."
+          npm run test:e2e:ci -- --project=${{ matrix.browser }} && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "E2E tests completed"
     
     - name: Generate Allure Report
       if: always()
       run: |
         echo "Generating Allure report..."
-        npm run test:e2e:allure:generate
+        for i in {1..3}; do
+          echo "Attempt $i: Generating Allure report..."
+          npm run test:e2e:allure:generate && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Allure report generated"
     
     - name: Upload test results
@@ -157,6 +197,12 @@ jobs:
     - name: Performance Test
       run: |
         echo "Starting performance test..."
-        npm install -g autocannon
+        for i in {1..3}; do
+          echo "Attempt $i: Running performance test..."
+          npm install -g autocannon && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         autocannon -c 10 -d 60 -r 1000 http://localhost:3000
         echo "Performance test completed" 
