--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -21,6 +21,9 @@ jobs:
         echo "Run Number: ${{ github.run_number }}"
         echo "Actor: ${{ github.actor }}"
         echo "Event Path: ${{ github.event_path }}"
+        echo "Repository: ${{ github.repository }}"
+        echo "Ref: ${{ github.ref }}"
+        echo "SHA: ${{ github.sha }}"
     
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -41,27 +44,57 @@ jobs:
     - name: Install Dependencies
       run: |
         echo "Starting dependency installation..."
-        npm ci
+        for i in {1..3}; do
+          echo "Attempt $i: Installing dependencies..."
+          npm ci && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Installing Playwright browsers..."
-        npx playwright install --with-deps || true
+        for i in {1..3}; do
+          echo "Attempt $i: Installing Playwright..."
+          npx playwright install --with-deps || true && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Dependencies installed successfully"
     
     - name: Run E2E Tests
       run: |
         echo "Starting E2E test execution..."
-        npm run test:e2e
+        for i in {1..3}; do
+          echo "Attempt $i: Running E2E tests..."
+          npm run test:e2e && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "E2E tests completed"
     
     - name: Install Allure Command Line
       run: |
         echo "Installing Allure CLI..."
-        npm install -g allure-commandline
+        for i in {1..3}; do
+          echo "Attempt $i: Installing Allure CLI..."
+          npm install -g allure-commandline && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Allure CLI installed"
     
     - name: Generate Allure Report
       run: |
         echo "Generating Allure report..."
-        npm run test:e2e:allure:generate
+        for i in {1..3}; do
+          echo "Attempt $i: Generating Allure report..."
+          npm run test:e2e:allure:generate && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Allure report generated"
     
     - name: Upload Allure Report
@@ -85,7 +118,13 @@ jobs:
     - name: Generate Test Coverage Badge
       run: |
         echo "Generating test coverage badge..."
-        echo "coverage=$(cat test-results/coverage.txt)" >> $GITHUB_OUTPUT
+        for i in {1..3}; do
+          echo "Attempt $i: Generating coverage badge..."
+          echo "coverage=$(cat test-results/coverage.txt)" >> $GITHUB_OUTPUT && break || {
+            echo "Attempt $i failed, waiting 10 seconds before retry..."
+            sleep 10
+          }
+        done
         echo "Coverage badge generated"
       id: coverage
 
