--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:gh-pages": "vite build --base=/open-invest-spotlight-dao/",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "npm run test:unit",
