--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,15 +18,6 @@ jobs:
       with:
         fetch-depth: 0
     
-    - name: Debug Repository Info
-      run: |
-        echo "Repository: ${{ github.repository }}"
-        echo "Ref: ${{ github.ref }}"
-        echo "SHA: ${{ github.sha }}"
-        echo "Event Name: ${{ github.event_name }}"
-        echo "Workflow: ${{ github.workflow }}"
-        echo "Run ID: ${{ github.run_id }}"
-    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
@@ -42,24 +33,10 @@ jobs:
           ${{ runner.os }}-node-
     
     - name: Install dependencies
-      run: |
-        echo "Installing dependencies..."
-        for i in {1..3}; do
-          echo "Attempt $i: Installing dependencies..."
-          npm ci && break || {
-            echo "Attempt $i failed, waiting 10 seconds before retry..."
-            sleep 10
-          }
-        done
-        echo "Dependencies installed successfully"
+      run: npm ci
     
     - name: Run unit tests with coverage
       run: npm run test:unit:coverage
-
-    - name: Check coverage file
-      run: |
-        ls -lh ./coverage
-        cat ./coverage/lcov.info || echo "Arquivo lcov.info não encontrado"
     
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
@@ -86,15 +63,6 @@ jobs:
       with:
         fetch-depth: 0
     
-    - name: Debug Environment
-      run: |
-        echo "Node Version: ${{ matrix.node-version }}"
-        echo "Browser: ${{ matrix.browser }}"
-        echo "Runner OS: ${{ runner.os }}"
-        echo "Runner Temp: ${{ runner.temp }}"
-        echo "Workflow: ${{ github.workflow }}"
-        echo "Run ID: ${{ github.run_id }}"
-    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
@@ -110,53 +78,17 @@ jobs:
           ${{ runner.os }}-playwright-
     
     - name: Install dependencies
-      run: |
-        echo "Installing project dependencies..."
-        for i in {1..3}; do
-          echo "Attempt $i: Installing dependencies..."
-          npm ci && break || {
-            echo "Attempt $i failed, waiting 10 seconds before retry..."
-            sleep 10
-          }
-        done
-        echo "Project dependencies installed"
+      run: npm ci
     
     - name: Install Playwright browsers
-      run: |
-        echo "Installing Playwright browser: ${{ matrix.browser }}"
-        for i in {1..3}; do
-          echo "Attempt $i: Installing Playwright browser..."
-          npx playwright install ${{ matrix.browser }} --with-deps && break || {
-            echo "Attempt $i failed, waiting 10 seconds before retry..."
-            sleep 10
-          }
-        done
-        echo "Playwright browser installed"
+      run: npx playwright install ${{ matrix.browser }} --with-deps
     
     - name: Run E2E tests
-      run: |
-        echo "Starting E2E tests for ${{ matrix.browser }}..."
-        for i in {1..3}; do
-          echo "Attempt $i: Running E2E tests..."
-          npm run test:e2e:ci -- --project=${{ matrix.browser }} && break || {
-            echo "Attempt $i failed, waiting 10 seconds before retry..."
-            sleep 10
-          }
-        done
-        echo "E2E tests completed"
+      run: npm run test:e2e:ci -- --project=${{ matrix.browser }}
     
     - name: Generate Allure Report
       if: always()
-      run: |
-        echo "Generating Allure report..."
-        for i in {1..3}; do
-          echo "Attempt $i: Generating Allure report..."
-          npm run test:e2e:allure:generate && break || {
-            echo "Attempt $i failed, waiting 10 seconds before retry..."
-            sleep 10
-          }
-        done
-        echo "Allure report generated"
+      run: npm run test:e2e:allure:generate
     
     - name: Upload test results
       uses: actions/upload-artifact@v4
@@ -172,34 +104,29 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./allure-report
+
+  deploy:
+    needs: [unit-tests, e2e-tests]
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     
-    - name: Run Security Scan
-      uses: snyk/actions/node@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    steps:
+    - uses: actions/checkout@v4
     
-    - name: Dependency Check
-      uses: dependency-check/Dependency-Check_Action@main
+    - name: Use Node.js
+      uses: actions/setup-node@v4
       with:
-        project: 'open-invest-spotlight-dao'
-        path: '.'
-        format: 'HTML'
+        node-version: '20.x'
+        cache: 'npm'
     
-    - name: Run Compliance Check
-      uses: github/super-linter@v4
-      env:
-        VALIDATE_ALL_CODEBASE: true
-        DEFAULT_BRANCH: main
+    - name: Install dependencies
+      run: npm ci
     
-    - name: Performance Test
-      run: |
-        echo "Starting performance test..."
-        for i in {1..3}; do
-          echo "Attempt $i: Running performance test..."
-          npm install -g autocannon && break || {
-            echo "Attempt $i failed, waiting 10 seconds before retry..."
-            sleep 10
-          }
-        done
-        autocannon -c 10 -d 60 -r 1000 http://localhost:3000
-        echo "Performance test completed" 
+    - name: Build
+      run: npm run build:gh-pages
+    
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./dist 
