--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,9 @@ jobs:
           ${{ runner.os }}-node-
     
     - name: Install dependencies
-      run: npm ci
+      run: |
+        rm -rf node_modules package-lock.json
+        npm install
     
     - name: Run unit tests with coverage
       run: npm run test:unit:coverage
