--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^1.6.1",
     "allure-commandline": "^2.34.0",
     "allure-playwright": "^3.2.1",
     "autoprefixer": "^10.4.20",
