--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -114,6 +119,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Use Node.js
       uses: actions/setup-node@v4
@@ -122,7 +129,9 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: |
+        rm -rf node_modules package-lock.json
+        npm install
     
     - name: Build
       run: npm run build:gh-pages
