--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
       run: npm ci
     
     - name: Install Playwright browsers
-      run: npx playwright install ${{ matrix.browser }} --with-deps
+      run: npx playwright install --with-deps
     
     - name: Run E2E tests
       run: npm run test:e2e:ci -- --project=${{ matrix.browser }}
